--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   application:
-    name: eureka-server
+    name: eureka-server #Nombre del microservicio (EUREKA Application)
 
 server:
   port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     fetch-registry: false
     register-with-eureka: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
